libpurple/wrapper/Blist.cs


		/*
		 * PurpleAccount * purple_buddy_get_account(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_buddy_get_account(IntPtr buddy);

		public static PurpleAccount BuddyGetAccount(PurpleBuddy buddy)
		{
			return new PurpleAccount(purple_buddy_get_account(buddy.Reference));
		}

		/*
		 * char * purple_buddy_get_name(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_buddy_get_name(IntPtr buddy);

		public static string BuddyGetName(PurpleBuddy buddy)
		{
			return purple_buddy_get_name(buddy.Reference);
		}

		/*
		 * PurpleBuddyIcon * purple_buddy_get_icon(PurpleBuddy * buddy)
		 * 
		 * Could not generate a wrapper for purple_buddy_get_icon in file "blist.h".
		 * Message: The type could not be resolved (PurpleBuddyIcon * purple_buddy_get_icon(PurpleBuddy * buddy)).
		 */

		/*
		 * gpointer purple_buddy_get_protocol_data(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_buddy_get_protocol_data(IntPtr buddy);

		public static IntPtr BuddyGetProtocolData(PurpleBuddy buddy)
		{
			return purple_buddy_get_protocol_data(buddy.Reference);
		}

		/*
		 * void purple_buddy_set_protocol_data(PurpleBuddy * buddy, gpointer data)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_buddy_set_protocol_data(IntPtr buddy, IntPtr data);

		public static void BuddySetProtocolData(PurpleBuddy buddy, IntPtr data)
		{
			purple_buddy_set_protocol_data(buddy.Reference, data);
		}

		/*
		 * PurpleContact * purple_buddy_get_contact(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_buddy_get_contact(IntPtr buddy);

		public static PurpleContact BuddyGetContact(PurpleBuddy buddy)
		{
			return new PurpleContact(purple_buddy_get_contact(buddy.Reference));
		}

		/*
		 * PurplePresence * purple_buddy_get_presence(PurpleBuddy * buddy)
		 * 
		 * Could not generate a wrapper for purple_buddy_get_presence in file "blist.h".
		 * Message: The type could not be resolved (PurplePresence * purple_buddy_get_presence(PurpleBuddy * buddy)).
		 */

		/*
		 * void purple_blist_add_buddy(PurpleBuddy * buddy, PurpleContact * contact, PurpleGroup * group, PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_add_buddy(IntPtr buddy, IntPtr contact, IntPtr group, IntPtr node);

		public static void AddBuddy(PurpleBuddy buddy, PurpleContact contact, PurpleGroup group, PurpleBlistNode node)
		{
			purple_blist_add_buddy(buddy.Reference, contact.Reference, group.Reference, node.Reference);
		}

		/*
		 * PurpleGroup * purple_group_new(char * name)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_group_new(string name);

		public static PurpleGroup GroupNew(string name)
		{
			return new PurpleGroup(purple_group_new(name));
		}

		/*
		 * void purple_group_destroy(PurpleGroup * group)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_group_destroy(IntPtr group);

		public static void GroupDestroy(PurpleGroup group)
		{
			purple_group_destroy(group.Reference);
		}

		/*
		 * void purple_blist_add_group(PurpleGroup * group, PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_add_group(IntPtr group, IntPtr node);

		public static void AddGroup(PurpleGroup group, PurpleBlistNode node)
		{
			purple_blist_add_group(group.Reference, node.Reference);
		}

		/*
		 * PurpleContact * purple_contact_new()
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_contact_new();

		public static PurpleContact ContactNew()
		{
			return new PurpleContact(purple_contact_new());
		}

		/*
		 * void purple_contact_destroy(PurpleContact * contact)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_contact_destroy(IntPtr contact);

		public static void ContactDestroy(PurpleContact contact)
		{
			purple_contact_destroy(contact.Reference);
		}

		/*
		 * void purple_blist_add_contact(PurpleContact * contact, PurpleGroup * group, PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_add_contact(IntPtr contact, IntPtr group, IntPtr node);

		public static void AddContact(PurpleContact contact, PurpleGroup group, PurpleBlistNode node)
		{
			purple_blist_add_contact(contact.Reference, group.Reference, node.Reference);
		}

		/*
		 * void purple_blist_merge_contact(PurpleContact * source, PurpleBlistNode * node)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_merge_contact(IntPtr source, IntPtr node);

		public static void MergeContact(PurpleContact source, PurpleBlistNode node)
		{
			purple_blist_merge_contact(source.Reference, node.Reference);
		}

		/*
		 * PurpleBuddy * purple_contact_get_priority_buddy(PurpleContact * contact)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_contact_get_priority_buddy(IntPtr contact);

		public static PurpleBuddy ContactGetPriorityBuddy(PurpleContact contact)
		{
			return new PurpleBuddy(purple_contact_get_priority_buddy(contact.Reference));
		}

		/*
		 * void purple_contact_set_alias(PurpleContact * contact, char * alias)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_contact_set_alias(IntPtr contact, string alias);

		public static void ContactSetAlias(PurpleContact contact, string alias)
		{
			purple_contact_set_alias(contact.Reference, alias);
		}

		/*
		 * char * purple_contact_get_alias(PurpleContact * contact)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_contact_get_alias(IntPtr contact);

		public static string ContactGetAlias(PurpleContact contact)
		{
			return purple_contact_get_alias(contact.Reference);
		}

		/*
		 * gboolean purple_contact_on_account(PurpleContact * contact, PurpleAccount * account)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_contact_on_account(IntPtr contact, IntPtr account);

		public static bool ContactOnAccount(PurpleContact contact, PurpleAccount account)
		{
			return purple_contact_on_account(contact.Reference, account.Reference);
		}

		/*
		 * void purple_contact_invalidate_priority_buddy(PurpleContact * contact)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_contact_invalidate_priority_buddy(IntPtr contact);

		public static void ContactInvalidatePriorityBuddy(PurpleContact contact)
		{
			purple_contact_invalidate_priority_buddy(contact.Reference);
		}

		/*
		 * void purple_blist_remove_buddy(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_remove_buddy(IntPtr buddy);

		public static void RemoveBuddy(PurpleBuddy buddy)
		{
			purple_blist_remove_buddy(buddy.Reference);
		}

		/*
		 * void purple_blist_remove_contact(PurpleContact * contact)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_remove_contact(IntPtr contact);

		public static void RemoveContact(PurpleContact contact)
		{
			purple_blist_remove_contact(contact.Reference);
		}

		/*
		 * void purple_blist_remove_chat(PurpleChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_remove_chat(IntPtr chat);

		public static void RemoveChat(PurpleChat chat)
		{
			purple_blist_remove_chat(chat.Reference);
		}

		/*
		 * void purple_blist_remove_group(PurpleGroup * group)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_blist_remove_group(IntPtr group);

		public static void RemoveGroup(PurpleGroup group)
		{
			purple_blist_remove_group(group.Reference);
		}

		/*
		 * char * purple_buddy_get_alias_only(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_buddy_get_alias_only(IntPtr buddy);

		public static string BuddyGetAliasOnly(PurpleBuddy buddy)
		{
			return purple_buddy_get_alias_only(buddy.Reference);
		}

		/*
		 * char * purple_buddy_get_server_alias(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_buddy_get_server_alias(IntPtr buddy);

		public static string BuddyGetServerAlias(PurpleBuddy buddy)
		{
			return purple_buddy_get_server_alias(buddy.Reference);
		}

		/*
		 * char * purple_buddy_get_contact_alias(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_buddy_get_contact_alias(IntPtr buddy);

		public static string BuddyGetContactAlias(PurpleBuddy buddy)
		{
			return purple_buddy_get_contact_alias(buddy.Reference);
		}

		/*
		 * char * purple_buddy_get_local_alias(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_buddy_get_local_alias(IntPtr buddy);

		public static string BuddyGetLocalAlias(PurpleBuddy buddy)
		{
			return purple_buddy_get_local_alias(buddy.Reference);
		}

		/*
		 * char * purple_buddy_get_alias(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_buddy_get_alias(IntPtr buddy);

		public static string BuddyGetAlias(PurpleBuddy buddy)
		{
			return purple_buddy_get_alias(buddy.Reference);
		}

		/*
		 * char * purple_buddy_get_local_buddy_alias(PurpleBuddy * buddy)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_buddy_get_local_buddy_alias(IntPtr buddy);

		public static string BuddyGetLocalBuddyAlias(PurpleBuddy buddy)
		{
			return purple_buddy_get_local_buddy_alias(buddy.Reference);
		}

		/*
		 * char * purple_chat_get_name(PurpleChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_chat_get_name(IntPtr chat);

		public static string ChatGetName(PurpleChat chat)
		{
			return purple_chat_get_name(chat.Reference);
		}

		/*
		 * PurpleBuddy * purple_find_buddy(PurpleAccount * account, char * name)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_find_buddy(IntPtr account, string name);

		public static PurpleBuddy FindBuddy(PurpleAccount account, string name)
		{
			return new PurpleBuddy(purple_find_buddy(account.Reference, name));
		}

		/*
		 * GSList * purple_find_buddies(PurpleAccount * account, char * name)
		 * 
		 * Could not generate a wrapper for purple_find_buddies in file "blist.h".
		 * Message: The type could not be resolved (GSList * purple_find_buddies(PurpleAccount * account, char * name)).
		 */

		/*
		 * PurpleGroup * purple_find_group(char * name)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_find_group(string name);

		public static PurpleGroup FindGroup(string name)
		{
			return new PurpleGroup(purple_find_group(name));
		}

		/*
		 * PurpleChat * purple_blist_find_chat(PurpleAccount * account, char * name)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_blist_find_chat(IntPtr account, string name);

		public static PurpleChat FindChat(PurpleAccount account, string name)
		{
			return new PurpleChat(purple_blist_find_chat(account.Reference, name));
		}

		/*
		 * PurpleGroup * purple_chat_get_group(PurpleChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_chat_get_group(IntPtr chat);

		public static PurpleGroup ChatGetGroup(PurpleChat chat)
		{
			return new PurpleGroup(purple_chat_get_group(chat.Reference));
		}

		/*
		 * PurpleAccount * purple_chat_get_account(PurpleChat * chat)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_chat_get_account(IntPtr chat);
